first-person'ing texts

--- a/index.html
+++ b/index.html
@@ -19,47 +19,48 @@
 <div id="c-w">
 <div id="c">
 	<p id="brief">
-		Evandro - or <a href="http://google.com/search?q=eMyller">eMyller</a>, as known in the interwebs - is a passionate <strong>web developer</strong> moved by challenges.
-		His experience and the open source community has taught him what he knows today.
-		He likes to innovate, to break paradigms in favor of the good.
-		He's born and lives at <strong>Brazil</strong>, in one of the hottest places of the country. His fan is his loyal company of most of the time.
+		I'm a <strong>web developer</strong> moved by challenges and lean development philosophies.
+		My personal experiences and the open source community has taught me what I know today.
+		I like to innovate, to break paradigms in favor of the good.
+		I was born and live at <strong>Brazil</strong>, in one of the hottest places of the country.
+		My fan is my loyal company of most of the time.
 	</p>
 	<p>
-		He currently works on some parallel projects and companies and wishes that there was someone else to give all the attention his pillow needs.
-		Something about his work:
+		I currently work on some parallel projects and companies and wishes that there was someone else to give all the attention my pillow needs.
+		Something about my work:
 	</p>
 	<ul>
 		<li>
-			Does <strong>back-end</strong> work with <a href="http://python.org">Python</a>, <a href="http://djangoproject.com">Django</a> and whatever he finds useful;
+			Do <strong>back-end</strong> work with <a href="http://python.org">Python</a>, <a href="http://djangoproject.com">Django</a> and whatever he finds useful;
 		</li>
 		<li>
-			Speaks JavaScript, created <a href="http://mandoojs.com">Mandoo</a> and does lots of cool <strong>front-end</strong> stuff with it;
+			Speak JavaScript, created <a href="http://mandoojs.com">Mandoo</a> and do lots of cool <strong>front-end</strong> stuff with it;
 		</li>
 		<li>
-			Designs web pages and other user interfaces when inspired;
+			Design web pages and other user interfaces when inspired;
 		</li>
 		<li>
-			Likes to teach about web, standards, programming;
+			Like to teach about web, standards, programming;
 		</li>
 		<li>
-			Loves the <strong>open source</strong> philosophy and how it has contributed to his life;
+			Love the <strong>open source</strong> philosophy and how it has contributed to my life;
 		</li>
 		<li>
-			Yes, he's a power Linux (<a href="http://kubuntu.org">Kubuntu</a>) user and spreader.
+			Yes, I'm a power Linux (<a href="http://kubuntu.org">Kubuntu</a>) user and spreader.
 		</li>
 	</ul>
 	<p>
-		You can easily reach him at:
+		You can easily reach me at:
 	</p>
 	<ul id="contact-links">
 		<li>
 			<a href="http://twitter.com/eMyller">Twitter</a> (mostly portuguese) - non nerdish stuff randomly shared;
 		</li>
 		<li>
-			<a href="http://github.com/emyller">Github</a> - some of his open-source contributions;
+			<a href="http://github.com/emyller">Github</a> - some of my open-source contributions;
 		</li>
 		<li>
-			<a href="http://identi.ca/eMyller">Identica</a> - nerd stuff for his followers and groups;
+			<a href="http://identi.ca/eMyller">Identica</a> - nerd stuff for my followers and groups;
 		</li>
 		<li>
 			At #mandoojs and #django @ freenode IRC;
