'made by' pointing to the site's repository

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </div>
 
 <div id="f">
-	<p>made by <a href="http://github.com/emyller">me</a>.</p>
+	<p>made by <a href="http://github.com/emyller/emyller.net">me</a>.</p>
 </div>
 
 </div>
